Revert changes in common files