@@ -1,7 +1,3 @@
-import okhttp3.MediaType.Companion.toMediaType
-import okhttp3.OkHttpClient
-import okhttp3.Request
-import okhttp3.RequestBody.Companion.toRequestBody
 import org.apache.tools.ant.taskdefs.condition.Os.*
 import org.gradle.api.JavaVersion.VERSION_1_8
 import org.gradle.api.internal.HasConvention
@@ -18,6 +14,10 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import java.io.Writer
 import java.net.URL
 import kotlin.concurrent.thread
+import okhttp3.OkHttpClient
+import okhttp3.Request
+import okhttp3.MediaType.Companion.toMediaType
+import okhttp3.RequestBody.Companion.toRequestBody
 
 // The same as `--full-stacktrace` param
 gradle.startParameter.showStacktrace = ShowStacktrace.ALWAYS_FULL
@@ -150,7 +150,6 @@ allprojects {
             // because otherwise it can lead to compatibility issues.
             // Also note that IDEA does the same thing at startup, and not only for tests.
             systemProperty("jna.nosys", "true")
-            systemProperty("idea.max.content.load.filesize", "77000")
             if (TEAMCITY) {
                 // Make teamcity builds green if only muted tests fail
                 // https://youtrack.jetbrains.com/issue/TW-16784
@@ -186,15 +185,14 @@ project(":plugin") {
         val plugins = mutableListOf(
             project(":intellij-toml"),
             "IntelliLang",
-//            graziePlugin,
-            psiViewerPlugin,
-            "com.mnw.tabmover:1.3.0"
+            graziePlugin,
+            psiViewerPlugin
         )
         if (baseIDE == "idea") {
             plugins += listOf(
-//                "copyright",
-                "java"
-//                nativeDebugPlugin
+                "copyright",
+                "java",
+                nativeDebugPlugin
             )
         }
         setPlugins(*plugins.toTypedArray())
@@ -229,11 +227,9 @@ project(":plugin") {
 
         withType<RunIdeTask> {
             // Default args for IDEA installation
-            jvmArgs("-Xmx2G", "-XX:+UseG1GC", "-XX:SoftRefLRUPolicyMSPerMB=50")
+            jvmArgs("-Xmx768m", "-XX:+UseConcMarkSweepGC", "-XX:SoftRefLRUPolicyMSPerMB=50")
             // uncomment if `unexpected exception ProcessCanceledException` prevents you from debugging a running IDE
-            jvmArgs("-Didea.ProcessCanceledException=disabled")
-            jvmArgs("-Dnosplash=true")
-            systemProperty("suppress.focus.stealing", "true")
+            // jvmArgs("-Didea.ProcessCanceledException=disabled")
         }
 
         withType<PatchPluginXmlTask> {
